--- a/css/style.css
+++ b/css/style.css
@@ -171,8 +171,11 @@ footer > h2 {
     flex-wrap: wrap;
     opacity: 0.83;
 }   
-.column2 {
-    margin-left: 16.5%;
+.column2 img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 60%;
 }
 #chronological {
     text-align: center;
@@ -201,6 +204,7 @@ ul hr {
 }
 li {
     margin: 15px;
+    text-align: center;
 }
 /*meetup section styling*/
 .meetup-section {
@@ -214,7 +218,7 @@ li {
     height: 650px;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100%;
     position: relative;
     object-fit: fill;
 }
@@ -241,7 +245,7 @@ input[type=submit] {
 form > p {
     margin: 40px;
     color: #4a4a4a;
-    font-size: larger;
+    font-size: 24px;
     box-sizing: content-box;
     border: 1px solid #888E8E;
     border-radius: 10px;
@@ -272,7 +276,7 @@ form > h2 {
     margin-bottom: 35px;
 }
 .map {
-    margin-left: 15%;
+    margin-left: 16%;
 }  
 /*form dump styles*/
 #thanks {
@@ -362,6 +366,7 @@ form > h2 {
     }
     #early-work {
         font-size: 50px;
+        text-decoration: solid 1px #4a4a4a;
         margin-top: -4%;
     }
     #summary {
@@ -398,7 +403,7 @@ form > h2 {
         font-size: 45px;
     }
     #enter {
-        font-size: 60px;
+        font-size: 55px;
     }
     .email {
         font-size: 60px;
@@ -421,9 +426,9 @@ form > h2 {
         margin-left: 30%;
     }
    .map {
-       position: relative;
-       height: 0;
-       padding-bottom: 56.25%;
+    position: relative;
+    height: 0;
+    padding-bottom: 50%;
    }
    .map iframe {
     position: absolute;
@@ -442,7 +447,6 @@ form > h2 {
         margin-top: 0;
     }
     .column2 {
-        margin-left: 17%;
         width: 100%;
         height: 100%;
     }
@@ -504,8 +508,9 @@ form > h2 {
         display: flex;
         flex-direction: column-reverse;
         float: right;
-        line-height: 5px;
-        margin-top: 15px;
+        line-height: 12px;
+        margin-top: 25px;
+        padding: 0;
     }
     header p {
         margin-left: 50px;
@@ -547,6 +552,9 @@ form > h2 {
     }
     .row img {
         max-height: 300px;
+    }
+    #video {
+        margin-left: 0;
     }
     #robin {
         font-size: 25px;
@@ -638,8 +646,8 @@ form > h2 {
         padding-bottom: 55%;
         overflow: hidden;
     }
-    .social-networks {
-        font-size: 10px;
+    footer {
+        font-size: 15px;
     }
     #castle {
         display: flex;
