--- a/css/style.css
+++ b/css/style.css
@@ -775,7 +775,7 @@ form > h2 {
     }
 #menu-bar {
     display: flex;
-    align-items: end;
+    align-items: center;
     justify-content: flex-start;
     margin-top: -30%;
     font-size: smaller;
@@ -785,8 +785,7 @@ form > h2 {
     }
     .megan {
     font-size: small;
-    margin-left: 5%;
-    margin-bottom: 3px;
+    margin-bottom: 8px;
     }
     .reviews {
     display: none;
