--- a/css/style.css
+++ b/css/style.css
@@ -815,10 +815,13 @@ form > h2 {
         font-size: 20px;
     }
     #video {
-        position: relative;
-        height: 0;
         padding-bottom: 55%;
         overflow: hidden;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
     }
     .social-networks {
         font-size: 10px;
