--- a/css/style.css
+++ b/css/style.css
@@ -817,7 +817,7 @@ form > h2 {
     #video {
         padding-bottom: 55%;
         overflow: hidden;
-        position: relative;
+        position: absolute;
         top: 0;
         left: 0;
         width: 100%;
