--- a/css/style.css
+++ b/css/style.css
@@ -641,10 +641,13 @@ form > h2 {
         right: 20px;
     }
     #video {
-        position: relative;
-        height: 0;
         padding-bottom: 55%;
         overflow: hidden;
+        position: relative;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
     }
     footer {
         font-size: 15px;
@@ -722,10 +725,13 @@ form > h2 {
             font-size: 20px;
         }
         #video {
-            position: relative;
-            height: 0;
-            padding-bottom: 55%;
-            overflow: hidden;
+        padding-bottom: 55%;
+        overflow: hidden;
+        position: relative;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
         }
         .social-networks {
             font-size: 10px;
