--- a/css/style.css
+++ b/css/style.css
@@ -772,7 +772,7 @@ form > h2 {
 
 
 /* For small phone screens sizes from 320 wide and down */
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 320px) {
 #logo {
     display: flex;
     float: inline-end;
@@ -823,7 +823,6 @@ form > h2 {
     #video {
         padding-bottom: 55%;
         overflow: hidden;
-        position: absolute;
         top: 0;
         left: 0;
         width: 100%;
