--- a/css/style.css
+++ b/css/style.css
@@ -823,6 +823,7 @@ form > h2 {
     #video {
         padding-bottom: 55%;
         overflow: hidden;
+        position: absolute;
         top: 0;
         left: 0;
         width: 100%;
