--- a/css/style.css
+++ b/css/style.css
@@ -100,9 +100,9 @@ hr {
     padding: 5px;
 }
 #circle {
-    background: url(../assets/images/robinhobb-scaled.jpeg);
-    height: 600px;
-    width: 600px;
+    background: url(../assets/images/robin3.webp);
+    height: 500px;
+    width: 500px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: auto;
@@ -121,7 +121,6 @@ hr {
     text-align: center;
     margin: 40px 40px 15% 0;
     font-size: 27px;
-    text-align: right;
     display: flex;
     align-content: center;
 }
@@ -365,8 +364,8 @@ form > h2 {
         font-size: 50px;
     }
     #circle {
-        width: 700px;
-        height: 650px;
+        width: 500px;
+        height: 500px;
         border-radius: 50%;
         float: left;
         margin-top: 6%;
@@ -794,7 +793,9 @@ form > h2 {
             margin: 0;
         }
         #circle {
-            display: none;
+            width: 300px;
+            height: 300px;
+            margin-left: 10%;
         }
         .column-a {
             position: sticky;
@@ -905,7 +906,8 @@ form > h2 {
         font-size: 20px;
     }
     #circle {
-        display: none;
+        width: 275px;
+        height: 275px;
     }
     .biography {
         margin-top: 10px;
