--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,8 @@ hr {
  #video-text {
     text-align: center;
     margin-top: 10px;
-    font-size: larger;
+    margin-bottom: 10%;
+    font-size: 25px;
  }
 /*social networks & footer*/
 footer {
@@ -297,7 +298,7 @@ form > h2 {
 /*form dump styles*/
 #thanks {
     background-image: url(../assets/images/thanks.jpeg);
-    height: 750px;
+    height: 600px;
     width: 100%;
     background-position: center;
     background-repeat: no-repeat;
@@ -380,13 +381,13 @@ form > h2 {
         margin-left: 0;
     }
     #video-text {
-        font-size: 40px;
+        font-size: 35px;
     }
     footer h2 {
-        font-size: 60px;
+        font-size: 40px;
     }
     .social-networks {
-        font-size: 35px;
+        font-size: 25px;
     }
     #early-work {
         font-size: 40px;
@@ -599,9 +600,13 @@ form > h2 {
         max-width: 50%;
         margin-bottom: -10px;
         margin-top: -3px;
+        margin-left: 1%;
     }
     #video {
         margin-left: 11%;
+    }
+    #video-text {
+        margin-top: 10%;
     }
     #circle { 
         width: 400px;
@@ -638,7 +643,6 @@ form > h2 {
         margin-left: 17%;
     }
     #thanks {
-    height: 200px;
     width: 100%;
     }
 }
@@ -646,9 +650,9 @@ form > h2 {
 @media screen and (max-width: 425px){
     #logo {
         display: flex;
-        float: inline-end;
         font-size: xx-large;
         line-height: 40px;
+        margin-left: -1%;
         }
     #menu-bar {
         display: flex;
@@ -716,6 +720,9 @@ form > h2 {
         overflow: hidden;
         position: relative;
     }
+    #video-text {
+        margin-top: 10%;
+    }
     footer {
         font-size: 15px;
     }
@@ -746,6 +753,7 @@ form > h2 {
         margin-left: 15px;
     }
     #thanks {
+    height: 400px;
     width: 100%;}
 }
 /* For medium to small phone screens sizes from 375 wide and down */
@@ -850,17 +858,16 @@ form > h2 {
 @media screen and (min-width: 320px) and (max-width: 320px) {
 #logo {
     display: flex;
-    float: inline-end;
     font-size: xx-large;
     line-height: 40px;
+    margin-left: -2%;
     }
 #menu-bar {
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    margin-top: -25%;
+    margin-top: -28%;
     font-size: 15px;
-    float: right;
     padding: 0;
     line-height: 5px;
     }
@@ -906,6 +913,9 @@ form > h2 {
         width: 80%;
         height: 80%;
     }
+    #video-text {
+        margin-top: 15%;
+    }
     .social-networks {
         font-size: 10px;
     }
@@ -938,7 +948,6 @@ form > h2 {
         height: 0;
         padding-bottom: 55%;
         overflow: hidden;
-        width: 50%;
     }
     #summary {
         font-size: 20px;
