--- a/css/style.css
+++ b/css/style.css
@@ -734,7 +734,7 @@ form > h2 {
     }
     .column2 img {
         width: 100%;
-        margin-left: 0 auto;
+        margin: 0 auto;
         display: flex;
         justify-content: center;
         margin-left: 25%;
