--- a/css/style.css
+++ b/css/style.css
@@ -126,6 +126,7 @@ hr {
 }
  #video {
     display: flex;
+    width: 100%;
     justify-content: center;
     margin-top: 5%;
 }
@@ -338,8 +339,8 @@ form > h2 {
         height: auto;
         margin-left: 11%;
     }
-    section iframe {
-        width: 60%;
+    div iframe {
+        width: 100%;
         margin-left: 10%;
     }
     .megan {
@@ -375,10 +376,11 @@ form > h2 {
         justify-content: center;
         padding-bottom: 10%;
         margin-top: -5%;
+        margin-left: -12%;
     }
-    section iframe {
+    div iframe {
         width: 40%;
-        margin-left: 0;
+        margin-left: 25%;
     }
     #video-text {
         font-size: 35px;
@@ -477,9 +479,9 @@ form > h2 {
         width: 100%;
         height: 100%;
     }
-    section iframe {
-        width: 60%;
-        margin-left: 12%;
+    div iframe {
+        width: 70%;
+        margin-left: 24%;
     }
     #video {
         display: flex;
@@ -546,8 +548,8 @@ form > h2 {
         width: 80%;
         margin-left: 12%;
     }
-   section iframe {
-    width: 80%;
+   div iframe {
+    width: 100%;
     margin-left: 70px;
     }
 }
@@ -572,7 +574,7 @@ form > h2 {
         width: 100%;
         height: 450px;
     }
-    section iframe {
+    div iframe {
         width: 80%;
         margin-left: 5px;
     }
